Style tweaks to ensure proper vertical spacing when >1 card actions are shown.

--- a/src/browser_action.css
+++ b/src/browser_action.css
@@ -83,7 +83,7 @@ header {
   color: #333;
   font-weight: 300;
   margin: 0 0 6px 0;
-  padding: 6px 0 3px 0;
+  padding: 6px 0 0 0;
   position: relative;
   overflow: hidden;
 }
